Bug 96657 - The drag and zoom tool does not show the selection area rectangle anymore (with openGL activated)
Summary: The drag and zoom tool does not show the selection area rectangle anymore (wi...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.0.2
Keywords: regression
Depends on:
Blocks: VCL-OpenGL
  Show dependency treegraph
 
Reported: 2015-12-22 00:49 UTC by Andy
Modified: 2016-10-25 19:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Here you see me choosing the desired zoom button and selecting the area I want to enlarge with mouse dragging and a dotted target rectangle visible (1.39 MB, application/octetstream)
2015-12-30 09:58 UTC, Andy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andy 2015-12-22 00:49:02 UTC
The tool to select an area of a document in DRAW or IMPRESS by mouse dragging and enlarge it when you release the mouse has always shown a dotted rectangle around the area you dragged which you wanted to enlarge.
Now in 5.1.0.1 this dragging rectangle is no more shown, making more difficult to understand what area you are going to zoom into when releasing the mouse.
Comment 1 A (Andy) 2015-12-26 17:23:59 UTC
Could you please give more information about the different single steps to reproduce it.  Thank you very much.
Comment 2 Buovjaga 2015-12-27 17:46:47 UTC
I found it: View - Toolbars - Zoom - Zoom & Pan (second to last on the right side of the toolbar).

I do see the dotted rectangle.

Any effect from disabling Tools - Options - LibO - View - Use OpenGL for all rendering?

Which OS were you using again?

Win 7 Pro 64-bit, Version: 5.1.0.1 (x64)
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Windows 6.1; Render: default; 
Locale: fi-FI (fi_FI)

Set to NEEDINFO.
Change back to UNCONFIRMED after you have provided more information.
Comment 3 Andy 2015-12-28 12:46:11 UTC
I am sorry, but I do not fully understand what kind of details I should provide.
The tool we are talking about is the one indicated by Beluga.
Using it, you drag a rectangle with the mouse on the page you're editing of any size and position, and after you release the mouse button the zoom is set to a factor that shows the rectangle content as big as possible, provided the whole rectangle content stays visible.
To me, this the most efficient way to zoom in in most cases.
However, its use depends on the fact that while dragging the mouse you can see a temporary dotted rectangle that allows you to see clearly what you will enlarge. Of course this rectangle will disappear when you release the mouse button
At the moment, using the tool in 5.1.0.1 the rectangle never appears.
And yes, I had openGL on when I tried it... in the meantime I was told that openGL is the problem also with zoom slider visualization corruption (see bug 96655).
Unfortunately, since OpenGL did not give any problem to me in many years, I did not fathom that is was now going to be troublesome.
At the moment, I am sorry but I do not have 5.1.0.1 installed anymore, since the numerous problems it showed made it pretty much unusable; I filed 6 bugs reports on it then downgraded.
Comment 4 Buovjaga 2015-12-28 13:34:09 UTC
Ok, we will wait for you to install 5.1 again and test with opengl off.
But it is possible to install it in parallel.. I don´t remember, if RC builds even install in parallel by default.

You did not mention your operating system yet.
Comment 5 Andy 2015-12-28 13:58:56 UTC
No, Release candidates do not install in parallel.
I have both a win 7 fixpack 1 machine, and a win 8.1 machine.
Generally I test both before reporting bugs.
Comment 6 Buovjaga 2015-12-28 14:23:17 UTC
(In reply to Andy from comment #5)
> No, Release candidates do not install in parallel.
> I have both a win 7 fixpack 1 machine, and a win 8.1 machine.
> Generally I test both before reporting bugs.

Ok, then you can use this easy tool to install in parallel: https://wiki.documentfoundation.org/SI-GUI
Download link: http://tdf.io/siguiexe
Comment 7 JPJ 2015-12-28 14:42:39 UTC
I am able to duplicate the issue of the missing zoom rectangle with "Tools - Options - LibO - View - Use OpenGL for all rendering" enabled.  If this option is disabled, the zoom rectangle appears as expected.

Kubuntu 14.04.3 amd64
Version: 5.1.0.1
Build ID: bcace328aabc4c8c10b56daa87da0a2ee6579b5a
Threads 4; Ver: Linux 3.13; Render: GL; 
Locale: en-US (en_US.UTF-8)
Comment 8 Buovjaga 2015-12-28 15:11:05 UTC
Ok, let's set to NEW, then.
Comment 9 Cor Nouws 2015-12-29 19:41:41 UTC
Hi Andy,

(In reply to Andy from comment #0)
> The tool to select an area of a document in DRAW or IMPRESS by mouse
> dragging and enlarge it when you release the mouse has always shown a dotted
> rectangle around the area you dragged which you wanted to enlarge.

I don't see it.

I start a Draw document.
Add two shapes.
Select the area around them.
Shft+Drag or Drag with the mouse.
Nor while dragging, nor after releasing the mouse, I see a dotted rectangle.

Tested in daily recent, 4.4.7.2, 3.3.0...
Ubuntu 32 bits.

What is wrong in my test?
Thanks - Cor
Comment 10 Buovjaga 2015-12-29 19:47:25 UTC
(In reply to Cor Nouws from comment #9)
> What is wrong in my test?

View - Toolbars - Zoom - Zoom & Pan (second to last on the right side of the toolbar).
Comment 11 Cor Nouws 2015-12-29 20:00:17 UTC
(In reply to Beluga from comment #10)
> (In reply to Cor Nouws from comment #9)
> > What is wrong in my test?
> 
> View - Toolbars - Zoom - Zoom & Pan (second to last on the right side of the
> toolbar).

I don't read that in Andy's report?
But I've no clue how that button should work. Sorry...
Comment 12 Buovjaga 2015-12-29 20:15:30 UTC
(In reply to Cor Nouws from comment #11)
> (In reply to Beluga from comment #10)
> > (In reply to Cor Nouws from comment #9)
> > > What is wrong in my test?
> > 
> > View - Toolbars - Zoom - Zoom & Pan (second to last on the right side of the
> > toolbar).
> 
> I don't read that in Andy's report?
> But I've no clue how that button should work. Sorry...

You can read it in my comment 2 ;)

When you click that button, your mouse cursor turns into a tool for zooming and panning, try it out. Then you will see the dashed line.
Comment 13 Buovjaga 2015-12-29 20:16:36 UTC
(In reply to Beluga from comment #12)
> When you click that button, your mouse cursor turns into a tool for zooming
> and panning, try it out. Then you will see the dashed line.

"tool for zooming" I should have said.. sorry.
Comment 14 Cor Nouws 2015-12-29 22:53:31 UTC
Do you mean the Zoom button or the Zoom&Pan button?
(I tried both, but do not have seen any dotted line, apart from the moment that I drag around the objects - independent from any icon on that toolbar..)
Comment 15 Andy 2015-12-30 09:56:26 UTC
Since understanding how this functionality worked seems to be difficult, I am attaching a brief video showing it so that the thing is clear. I am sorry for the UI to be in Italian.
Comment 16 Andy 2015-12-30 09:58:02 UTC
Created attachment 121629 [details]
Here you see me choosing the desired zoom button and selecting the area I want to enlarge with mouse dragging and a dotted target rectangle visible
Comment 17 Cor Nouws 2015-12-30 22:38:19 UTC
thanks - that's helpful!
Comment 18 Michael Meeks 2016-01-09 11:42:56 UTC
Thanks for filing; I implemented ::Invert and now we get a solid (inverted) tracking rectangle - I need to implement SAL_INVERT_TRACKFRAME it seems to get this working properly; essentially a dashed empty rectangle =)
Comment 19 Michael Meeks 2016-01-09 12:08:28 UTC
For 5-1:

https://gerrit.libreoffice.org/21289 tdf#96657 - vcl opengl: implement invert: Track Frame.

For master:

https://gerrit.libreoffice.org/21290 tdf#96657 - vcldemo - implement invert: Track Frame rendering test.
https://gerrit.libreoffice.org/21291 tdf#96657 - vcl opengl: implement invert: Track Frame.

Review for -5-1 appreciated - Tor ?
Comment 20 Commit Notification 2016-01-09 20:29:50 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7ede462d8a2a05eccede6d47c2f25649858c959d

tdf#96657 - vcldemo - implement invert: Track Frame rendering test.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 21 Commit Notification 2016-01-09 20:29:54 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=60790935cc143de49b732e93b6fb923b7669530b

tdf#96657 - vcl opengl: implement invert: Track Frame.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2016-01-11 10:11:18 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd70c25bda8f7ad8da6e68b6e88fd222cab1a10f&h=libreoffice-5-1

tdf#96657 - vcl opengl: implement invert: Track Frame.

It will be available in 5.1.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.