tdf#96657 - vcldemo - implement invert: Track Frame rendering test.

Change-Id: I07f4622945cf5787102317cfa38875c67104f265
Reviewed-on: https://gerrit.libreoffice.org/21290
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>